# src/api-gen/models/ResTfulResultTaxDto.ts
@@ -1,19 +1,0 @@
-import type { TaxDto } from "./TaxDto"
-
-export type ResTfulResultTaxDto = {
-   /**
-    * @type integer | undefined int32
-    */
-   statusCode?: number
-   data?: TaxDto
-   /**
-    * @type boolean | undefined
-    */
-   succeeded?: boolean
-   errors?: any
-   extras?: any
-   /**
-    * @type integer | undefined int64
-    */
-   timestamp?: number
-}
